2009-07-02  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Customize BrowseForm limits for embeddable pytis modules..

2009-07-02  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Allow variable substitution also in embedded module's content..

2009-07-02  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/form.py:
	Fixed input data validation within interactive import..

2009-07-02  Tomas Cerha  <cerha@brailcom.org>

	* INSTALL:
	* Makefile:
	CVS specific installation Makefile setup generalized..

2009-07-01  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Added generic support for variable substitution in CMS texts..

2009-06-30  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/screen.py:
	Adjust status fields witdh automatically to fit the displayed text..

2009-06-30  Tomas Cerha  <cerha@brailcom.org>

	* db/db_pytis_cms.py:
	* lib/pytis/cms/cms.py:
	* lib/pytis/cms/web.py:
	Pytis CMS: Allow using longer title for page heading and shorter for menu item..

2009-06-30  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/__init__.py:
	* lib/pytis/cms/cms.py:
	* lib/pytis/cms/web.py:
	* lib/pytis/extensions/__init__.py:
	* lib/pytis/extensions/cms/__init__.py:
	* lib/pytis/extensions/cms/cms.py:
	* lib/pytis/extensions/cms/web.py:
	Pytis CMS moved from `pytis.extensions.cms' to `pytis.cms'..

2009-06-26  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/extensions/cms/cms.py:
	Pytis CMS: Uncommented theme field `top-fg', but still left outside layout..

2009-06-26  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/inputfield.py:
	Fix of prevoius change in enumeration fields (Show empty items for NULL value in SelectionType.CHOICE input fields)..

2009-06-26  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/inputfield.py:
	Fix background color setting in SelectionType.LIST_BOX input fields..

2009-06-26  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/inputfield.py: